[package]
name = "mem-graph"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Knowledge graph primitives: entities, relationships, typed properties, BFS/DFS traversal"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5" }
proptest = "1"

[[bench]]
name = "graph_bench"
harness = false
